ストアウィンドウの編集を開始

--- a/register.kv
+++ b/register.kv
@@ -334,6 +334,32 @@ WindowManager:
 
 <StoreWindow>:
     name: 'store'
+    # BoxLayout:
+    #     orientation: 'vertical'
+    #         BoxLayout:
+    #             size_hint_y: 0.3
+    #             Button:
+    #                 text: "商品の追加・編集・削除"
+    #                 on_release: 
+    #             Button:
+    #                 text: "販売者ページへ"
+    #                 on_release: 
+    #                     root.manager.current = 'customer'
+    #                     root.manager.transition.direction = 'right'
+    #             Button:
+    #                 text: "売上の確認"
+    #                 on_release: 
+
+    #         BoxLayout:
+    #             size_hint_y: 0.7
+    #             id: L1
+                
+
+
+
+
+
+
     BoxLayout:
         KButton:
             text: '商品の追加・編集・削除'
