カートの中に商品がない状態で決済画面に遷移できないように修正

--- a/register.kv
+++ b/register.kv
@@ -445,6 +445,15 @@ WindowManager:
             text: 'メニューに戻る'
             on_release: root.closePopup()
 
+<ItemErrorPop>:
+    orientation: 'vertical'
+    KLabel:
+        text: '商品が選択されていません.'
+    BoxLayout:
+        KButton:
+            text: '閉じる'
+            on_release: root.CloseErrorPop()
+
 
 <ProductEditWindow>:
     name: 'p_edit'
